--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@
 *.swp
 
 # También es posible ignorar todos los subdirectorios y archivos en un directorio determinado
-archivos/**/*/*/* 
+archivos/****/***/**/* 
